Added: `withDeliveryReport` option support
